--- a/practice_business/src/styles/BottomScreenInfo.scss
+++ b/practice_business/src/styles/BottomScreenInfo.scss
@@ -11,6 +11,8 @@
     background: $background-dark;
     color: #fff;
 
+    z-index: 10;
+
     .links{
         width: 80%;
         height: 50%;
