--- a/practice_business/src/styles/Overlay.scss
+++ b/practice_business/src/styles/Overlay.scss
@@ -2,7 +2,7 @@
 
 .overlay{
     z-index: 5;
-    width: 100%;
+    width:100vw;
     height: 80vh;
     max-height: 500px;
     position: absolute;
